# jsound

./: LICENSE  README.md  flake.nix  json-schema-implementation-gap-analysis.md  json-schema-to-z3-spec.md  pyproject.toml  ref-unfolding-status-assessment.md  simulation-based-ref-resolution.md  z3-jsonschema-arrays-guidance.md
docs/: json-schema-implementation-gap-analysis.md  k-depth-unfolding-plan.md  simulation-based-ref-resolution.md  z3-jsonschema-informative-counterexamples.md
examples/: README_EXAMPLES.md  api_config_v1.json  api_config_v2_incompatible.json  api_user_v1.json  api_user_v2_compatible.json  conditional_consumer.json  conditional_producer.json  conditional_simple.json  config_database_v1.json  config_database_v2_secure.json  config_service_v1.json  config_service_v2_compatible.json  config_service_v2_incompatible.json  consumer.json  consumer_acyclic.json  consumer_anyof.json  consumer_cyclic.json  consumer_enum.json  consumer_loose.json  contains_keyword_examples.json  ecommerce_product_v1.json  ecommerce_product_v2_breaking.json  ecommerce_product_v2_expanded.json  format_consumer_lenient.json  format_custom.json  format_different.json  format_email_only.json  format_validation_producer.json  github_issue_v1.json  github_issue_v2_breaking.json  not_keyword_examples.json  payment_form_v1.json  payment_form_v2_strict.json  producer.json  producer_acyclic.json  producer_allof.json  producer_anyof.json  producer_const_42.json  producer_cyclic.json  producer_digits.json  (+9 more)
src/jsound/: api.py  enhanced_api.py  exceptions.py  main.py
src/jsound/cli/: __init__.py  commands.py
src/jsound/core/: __init__.py  json_encoding.py  labeling.py  schema_compiler.py  schema_registry.py  subsumption.py  unfolding_processor.py  witness.py
src/jsound/utils/: __init__.py  bounds.py
tests/: README.md  __init__.py  conftest.py  test_anyof.py  test_arrays.py  test_basic_types.py  test_conditionals.py  test_const_enum_enhanced.py  test_contains.py  test_dependencies.py  test_enhanced_explanations.py  test_format_validation.py  test_not.py  test_objects.py  test_oneof.py  test_pattern_properties.py  test_practical_evolution.py  test_real_world.py  test_refs.py  test_schema_evolution.py  test_subsumption_examples.py  test_unique_items.py
tests/test_examples/: __init__.py  schemas.py
