[project]
name = "jsound"
version = "0.1.0"
description = "JSON Schema subsumption checker using Z3 SMT solver"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "z3-solver>=4.12.0",
    "typer>=0.9.0",
    "jsonschema>=4.20.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
jsound = "jsound.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
]
