[project]
name = "jsound"
version = "0.1.0"
description = "JSON Schema subsumption checker using Z3 SMT solver"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "z3-solver>=4.12.0",
    "typer>=0.9.0",
    "jsonschema>=4.20.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
jsound = "jsound.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-x",  # stop on first failure
]
markers = [
    "subsumption: tests for valid subsumption cases (producer ⊆ consumer)",
    "anti_subsumption: tests for invalid subsumption cases (producer ⊄ consumer)", 
    "refs: tests for $ref resolution and unfolding",
    "anyof: tests for anyOf boolean composition",
    "allof: tests for allOf boolean composition",
    "oneOf: tests for oneOf boolean composition",
    "objects: tests for object property constraints",
    "arrays: tests for array item and length constraints",
    "strings: tests for string pattern and length constraints",
    "numbers: tests for numeric type and range constraints",
    "real_world: tests using real-world schema examples",
    "evolution: tests for schema evolution and API compatibility",
]
